--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,25 @@
-*{
-    padding: 0;
-    margin: 0%;
-    
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+  color: inherit;
 }
+
+header {
+  display: flex;
+  background-image: url(../img/present.jpeg);
+  background-size: cover;
+  height: 38vh;
+  color: white;
+}
+header h1 img {
+  max-width: 100px;
+  position: absolute;
+  left: 6vw;
+}
+header nav ul li {
+  align-items: end;
+}
+
+/*# sourceMappingURL=styles.css.map */
