--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,12 @@
 @import"./base.scss";
 
 @import"./component/header.scss";
+@import"./component/buttom.scss";
+@import"./component/form.scss";
+@import"./component/tarjet.scss";
+@import"./component/footer.scss";
+
+@import"./pages/index.scss";
+// @import"";
+// @import"";
+// @import"";
